# Github-Timesheet-with-MCP

./: .gitignore  README.md  a.txt  main.py  main2.py  pyproject.toml  server_config.json  test.py
src/: client.py  state.py
src/servers/: excel_server.py  github_server.py  jira_server.py
